--- a/posenet-demo/demo.html
+++ b/posenet-demo/demo.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>AWS S3 File Upload</title>
+		<title>AWS Posenet Start/Stop</title>
 	</head>
 	<body>
 		<button id="demo-start-recording">Start Recording</button>
